tests/negative/gold/setting_setter_test.gold
tests/negative/setting_setter_test.toit:7:7: error: Field-storing parameters may not call setters.
  foo .setter:
      ^~~~~~~
Compilation failed.
